k8s/06-ui-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: diabetes-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
      - name: ui-container
        image: mirfou1/diabete_ui:v0.0.1
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        volumeMounts:
        - name: index-html-volume
          mountPath: /usr/share/nginx/html/index.html
          subPath: index.html
        - name: nginx-config-volume
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
      volumes:
      - name: index-html-volume
        configMap:
          name: ui-index-html
      - name: nginx-config-volume
        configMap:
          name: ui-nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: ui-service
spec:
  type: NodePort
  selector:
    app: ui
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
