k8s/07-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: diabetes-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: diabetes.local
    http:
      paths:
      - path: /api/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: web-service
            port:
              number: 5000
      - path: /(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: ui-service
            port:
              number: 80
